# oreos

./: .editorconfig  .gitignore  Cargo.toml  LICENSE.txt  README.md  clippy.toml  notes.md  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
crates/kernel/: Cargo.toml
crates/kernel/src/: buffer.rs  lib.rs  macros.rs
crates/kernel/src/io/: mod.rs
crates/kernel/src/io/output/: mod.rs
scripts/: auto-header.fish
src/: buffer.rs  cors.rs  handlers.rs  lib.rs  macros.rs  main.rs  models.rs
src/io/output/: vga.rs
src/io/text/: cp437_generated.rs  gen_cp437.py  mod.rs
