[package]
  edition = "2024"
  name    = "heapexchange"
  version = "0.1.0"

[dependencies]
  async-trait = "0.1"
  dotenvy = "0.15"
  log = "0.4"
  pretty_env_logger = "0.5"
  rocket = { version = "0.5", features = ["json"] }
  serde = { version = "1", features = ["derive"] }
  serde_json = "1"
  sqlx = { version = "0.8", default-features = false, features = [

    "runtime-tokio",
    "tls-rustls",
    # "macros",
    "postgres",
    "uuid",
    # "chrono",
    # "migrate",
    "time",
  ] }
  thiserror = "2"
  tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
  uuid = { version = "1", features = ["v4"] }
