[package]
name              = "kernel"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
bench = false
name  = "oreos"
test  = false

[dependencies]
bootloader = { version = "0.9", features = ["map_physical_memory"] }
spin       = "0.12"

[lints]
workspace = true
